feat: change yml file to allow CI in github V6

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -61,5 +61,5 @@ jobs:
       env:
           DB_PORT: ${{ job.services.postgres.ports[5432] }}
           REDIS_PORT: ${{ job.services.redis.ports['6379'] }}
-      run: vendor/bin/phpunit --coverage-text
+      run: php artisan test
       
